ai-features/03-quota.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: global-token-quota
  namespace: ai
spec:
  plugin:
    ai-quota:
      store:
        redis:
          endpoints:
            - redis-stack-server.redis-stack.svc.cluster.local:6379
      outputTokenLimit:
        limit: 7000
        period: 24h
      sourceCriterion:
        requestHost: true
      onDenyResponse:
        statusCode: 429
        message: '{"Error":"global quota reached"}'
        contentType: "application/json"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: token-quota-team
  namespace: ai
spec:
  plugin:
    ai-quota:
      store:
        redis:
          endpoints:
            - redis-stack-server.redis-stack.svc.cluster.local:6379
      outputTokenLimit:
        limit: 2000
        period: 24h
      sourceCriterion:
        requestHeaderName: groups
      onDenyResponse:
        statusCode: 429
        message: '{"Error":"team quota reached"}'
        contentType: "application/json"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: token-quota-user-opus
  namespace: ai
spec:
  plugin:
    ai-quota:
      store:
        redis:
          endpoints:
            - redis-stack-server.redis-stack.svc.cluster.local:6379
      outputTokenLimit:
        limit: 700
        period: 24h
      sourceCriterion:
        requestHeaderName: username
      onDenyResponse:
        statusCode: 429
        message: '{"Error":"user quota reached for Opus model"}'
        contentType: "application/json"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: token-quota-user-haiku
  namespace: ai
spec:
  plugin:
    ai-quota:
      store:
        redis:
          endpoints:
            - redis-stack-server.redis-stack.svc.cluster.local:6379
      outputTokenLimit:
        limit: 1300
        period: 24h
      sourceCriterion:
        requestHeaderName: username
      onDenyResponse:
        statusCode: 429
        message: '{"Error":"user quota reached for Haiku model"}'
        contentType: "application/json"
